--- a/Frontend/css/screen.css
+++ b/Frontend/css/screen.css
@@ -97,6 +97,32 @@
 .o-margin-onboarding3 {
     margin-top: 100px;
 }
+
+.o-container-home {
+    margin-left: 16px;
+    margin-right: 16px;
+}
+
+.o-margin-top-home {
+    margin-top: 70px;
+}
+
+
+.grid-container {
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-gap: 16px;
+}
+
+.grid-item {
+    background-color: gray;
+    border-radius: 20px;
+    padding-top: 57px;  
+    padding-bottom: 57px;
+    text-align: center;
+}
+
+
 /*---------------------------------------/*
  # COMPONENTS
 /*---------------------------------------*/
