--- a/Frontend/css/screen.css
+++ b/Frontend/css/screen.css
@@ -312,7 +312,16 @@ input:disabled {
 
 .o-row {
     position: relative;
-    padding: var(--global-whitespace-md) var(--global-whitespace-md) 0;
+    padding: 0 var(--global-whitespace-md);
+}
+
+.o-row-tabbar {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 100;
+    padding: 0;
 }
 
 /* size modifiers */
@@ -332,7 +341,7 @@ input:disabled {
     margin-left: auto;
     margin-right: auto;
     max-width: 45rem;
-    /* 45rem * 16px = 720px */
+    /* 45rem * 16px =  */
     width: 100%;
 }
 
@@ -536,46 +545,20 @@ input:disabled {
 */
 
 .c-logo {
-    height: 1.5rem;
-    width: 1.5rem;
+    height: 40px;
+    width: 80px;
     display: flex;
     align-items: center;
     margin: 0;
 }
 
-.c-logo-md {
-    height: 2rem;
-    width: 2rem;
-}
-
 .c-logo__symbol {
     height: 100%;
     width: 100%;
-    transition: fill 0.2s ease;
 }
 
-.c-logo__symbol path,
-.c-logo__symbol text {
-    fill: var(--global-logo-color);
-}
-
-.c-logo__symbol:hover path,
-.c-logo__symbol:hover text {
+.c-logo__symbol {
     fill: var(--global-color-alpha);
-}
-
-@media (min-width: 576px) {
-    .c-logo {
-        height: 2rem;
-        width: 2rem;
-    }
-}
-
-@media (min-width: 768px) {
-    .c-logo {
-        height: 3.5rem;
-        width: 3.5rem;
-    }
 }
 
 /*
@@ -588,46 +571,122 @@ input:disabled {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: var(--navbar-height, 3.5rem);
-    transition: height 0.3s ease-out;
+    height: 56px;
 }
 
-.is-scrolled {
-    --navbar-height: 2rem;
+/*
+    Component: title
+    ---
+    Main title of the website
+*/
+
+.c-title {
+    font-size: 24px;
+    font-weight: var(--global-fontWeight-medium);
+    padding-top: 16px;
+    margin-bottom: 16px;
 }
 
-.c-header__nav {
-    display: none;
+/*
+    Component: games card
+    ---
+    Card to display a game
+*/
+
+.c-games {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(156px, 1fr));
+    gap: 16px;
 }
 
-@media (min-width: 768px) {
-    .c-header {
-        height: var(--navbar-height, 4.5rem);
-    }
+.c-game {
+    position: relative;
+    border: 3px solid var(--global-color-neutral-xx-light);
+    border-radius: var(--global-borderRadius-md);
+    padding: 24px 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
-    .is-scrolled {
-        --navbar-height: 3.5rem;
+.c-game__info-btn {
+    position: absolute;
+    top: 8px;
+    right: 8px;
+}
+
+.c-game__info-btn svg {
+    stroke: var(--global-color-neutral-light);
+    fill: var(--global-color-neutral-light);
+}
+
+.c-game__title {
+    font-size: 16px;
+    font-weight: var(--global-fontWeight-medium);
+}
+
+@media (min-width: 576px) {
+    .c-games {
+        grid-template-columns: repeat(auto-fill, minmax(200, 1fr));
     }
 }
 
-@media (min-width: 992px) {
-    .c-header {
-        height: var(--navbar-height, 6.75rem);
-    }
 
-    .is-scrolled {
-        --navbar-height: 4rem;
+/*
+    Component: icon
+    ---
+    Icon component
+*/
 
-    }
-
-    .c-header__nav {
-        display: block;
-    }
-
-    .c-header__mobile-nav-trigger {
-        display: none;
-    }
+.c-icon {
+    width: 24px;
+    height: 24px;
 }
+
+.c-icon--lg {
+    width: 72px;
+    height: 72px;
+}
+
+/*
+    Component: tabbar
+    ---
+    Tabbar component
+*/
+
+.c-tabbar {
+    background-color: var(--global-color-neutral-xxxx-light);
+
+}
+
+.c-tabbar__items {
+    display: flex;
+    justify-content: space-between;
+    padding: 4px 16px;
+    margin: 0;
+    align-items: center;
+}
+
+.c-tabbar__item {}
+
+.c-tabbar__label {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.c-tabbar__icon {
+    width: 32px;
+    height: 32px;
+    margin-bottom: 4px;
+}
+
+.c-tabbar__icon svg {
+    stroke: var(--global-color-neutral-light);
+    fill: var(--global-color-neutral-light);
+}
+
+.is-active .c-tabbar__icon path {}
 
 /*------------------------------------*\
 #UTILITIES
@@ -639,8 +698,12 @@ input:disabled {
     Utility classes to put specific colors onto elements
 */
 
-.u-color-text-light {
-    color: var(--global-color-text-light);
+.u-color-mine-sweeper {
+    stroke: #F24330;
+}
+
+.u-color-zen-game {
+    stroke: var(--global-color-secondary)
 }
 
 /*
@@ -648,6 +711,10 @@ input:disabled {
     ---
     Utility classes to put specific margins and paddings onto elements
 */
+
+.u-pt-clear {
+    padding-top: 0 !important;
+}
 
 .u-mb-clear {
     margin-bottom: 0 !important;
@@ -728,7 +795,7 @@ input:disabled {
 }
 
 .u-text-md {
-    font-size: 1rem;
+    font-size: 24px;
 }
 
 .u-text-lg {
