--- a/Frontend/css/screen.css
+++ b/Frontend/css/screen.css
@@ -644,22 +644,27 @@ input:disabled {
 .c-game {
     position: relative;
     border-radius: var(--global-borderRadius-md);
-    padding: 24px 0;
     display: flex;
     flex-direction: column;
     align-items: center;
     background-color: var(--global-color-neutral-xxxx-light);
     box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
-    border: 3px solid var(--global-color-neutral-xxxx-light);
-    outline: none;
-
 }
 
-.c-game:hover {
+.c-game__body {
+    width: 100%;
+    height: 100%;
+    padding: 24px 0;
+    outline: none;
+    border-radius: var(--global-borderRadius-md);
+    border: 3px solid var(--global-color-neutral-xxxx-light);
+}
+
+.c-game__body:hover {
     border: 3px solid var(--global-color-alpha);
 }
 
-.c-game:focus {
+.c-game__body:focus {
     border: 3px solid var(--global-color-alpha);
     box-shadow: var(--global-input-focus-boxShadowSpread) var(--global-input-focus-boxShadowColor);
 }
@@ -668,6 +673,14 @@ input:disabled {
     position: absolute;
     top: 8px;
     right: 8px;
+    outline: none;
+    border-radius: var(--global-borderRadius-md);
+    border: 2px solid var(--global-color-neutral-xxxx-light);
+    height: 28px;
+}
+
+.c-game__info-btn:focus-visible {
+    border: 2px solid var(--global-color-alpha);
 }
 
 .c-game__info-btn svg {
